[package]
name = "conquer_pointer"
version = "0.1.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/conquer_pointer.git"
documentation = "https://docs.rs/conquer_pointer"
keywords = ["pointer", "tagging", "concurrent", "no_std"]
edition = "2018"
exclude = [".travis.yml"]

[features]
nightly = []

[dependencies]
typenum = "1.11.2"

[build-dependencies]
cc = "1.0.50"
