[package]
name = "conquer-pointer"
version = "0.2.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/conquer-pointer.git"
documentation = "https://docs.rs/conquer-pointer"
keywords = ["pointer", "tagging", "concurrency"]
categories = ["no-std"]
edition = "2018"
exclude = [".github/"]

[build-dependencies]
cc = "1.0.62"